fluxcd/clusters/pi/longhorn/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
  labels:
    name: longhorn
